desktop-login: Add missing labels to input fields. Adding the missing labels fixes the horizontal alignment of the input and button. The CSS assumes the existence of a label for all input fields.

--- a/static/styles/portico/portico.css
+++ b/static/styles/portico/portico.css
@@ -1722,6 +1722,10 @@ label.label-title {
 .desktop-redirect-box {
     text-align: center;
 
+    label {
+        text-align: initial;
+    }
+
     .copy-token-info {
         font-weight: normal;
     }
